# LinearCentroids

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: animals_distilgpt2.json  colours_distilgpt2.json  disciplines_distilgpt2.json  languages_distilgpt2.json  months_distilgpt2.json  months_distilgpt2_demo.json  nouns_distilgpt2.json  stopwords_distilgpt2.json  tools_distilgpt2.json  whwords_distilgpt2.json  years_distilgpt2.json
docs/: .gitkeep  DECISIONS.md  NOTES.md  index.html
lce/: __init__.py  __main__.py  centroid_adapter.py  concepts.py  config.py  extraction.py  flags.py  geometry.py  io.py  metrics.py  plotting.py  registry.py  site_content.py  token_audit.py  topology.py
scripts/: 00_check_environment.py  01_generate_prompts.py  01b_audit_tokens.py  01c_generate_colour_prompts.py  01d_generate_noun_prompts.py  01e_generate_tool_prompts.py  01f_generate_animal_prompts.py  01g_generate_year_prompts.py  01h_generate_discipline_prompts.py  01i_generate_whword_prompts.py  01j_generate_stopword_prompts.py  01k_generate_language_prompts.py  02_extract_activations_centroids.py  03_compute_geometry.py  04_make_plots.py  05_build_site.py  06_colour_ordering_metrics.py  07_colour_make_plots.py  08_noun_ordering_metrics.py  09_noun_make_plots.py  10_tool_ordering_metrics.py  11_tool_make_plots.py  12_animal_ordering_metrics.py  13_animal_make_plots.py  14_year_ordering_metrics.py  15_year_make_plots.py  16_discipline_ordering_metrics.py  17_discipline_make_plots.py  18_whword_ordering_metrics.py  19_whword_make_plots.py  (+15 more)
(+299 files in other folders)
